Fix menu overlap by reducing font size

--- a/assets/stylesheets/responsive/custom.scss
+++ b/assets/stylesheets/responsive/custom.scss
@@ -66,7 +66,6 @@ $action-border: #d69457;
 /* General styling of nav menu items */
 %menu-item {
   text-decoration: none;
-  font-size: 1.1rem;
   color: $white;
   background-color: $main_menu-link_text;
   @include respond-min( $main_menu-mobile_menu_cutoff ){
